Fixed images not showing in unlock panel.

--- a/src/components/functional/wallet-connect/components/wallet-connect-scan/wallet-connect-scan.scss
+++ b/src/components/functional/wallet-connect/components/wallet-connect-scan/wallet-connect-scan.scss
@@ -65,7 +65,7 @@
       }
 
       .wallet-connect-scan-download-image {
-        @apply mvx:absolute mvx:right-0 mvx:bottom-0;
+        @apply mvx:absolute mvx:right-0 mvx:bottom-0 mvx:max-h-50;
       }
     }
   }
